fix: spaces on mobile

--- a/landing/style.css
+++ b/landing/style.css
@@ -178,7 +178,7 @@ header>.gradient-button {
   justify-content: space-between;
   flex-direction: column;
   gap: 1rem;
-  margin: 5rem auto;
+  margin: 2rem auto;
   max-width: var(--max-page-content-width);
   width: 80%;
 }
@@ -377,6 +377,7 @@ header>.gradient-button {
 
 @media screen and (min-width: 1024px) {
   .feature {
+    margin: 5rem auto;
     gap: 5rem;
   }
 
